Bug 130242 - EDITING Stacked area data labels are aligned to above
Summary: EDITING Stacked area data labels are aligned to above
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.0.0
Keywords: needsUXEval
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2020-01-28 15:41 UTC by NISZ LibreOffice Team
Modified: 2020-02-04 11:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Calc and the proposed new default (76.27 KB, image/png)
2020-01-28 15:41 UTC, NISZ LibreOffice Team
Details
Current default stacked area chart from Calc (15.98 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-01-28 15:48 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-01-28 15:41:31 UTC
Created attachment 157482 [details]
Screenshot of the problem in Calc and the proposed new default

Stacked area chart data labels are aligned to above by default when created in LibreOffice Calc. We think it would look better if it were aligned (vertically) centered.


Steps to reproduce:
    1. Insert Stacked Area Chart.
    2. Insert Data Labels.
    3. Notice the default Placement is above.

Actual results:
Default Placement is “above”. This cannot be modified in the Format Data Series dialog.

Expected results:
We would like to request to change the default placement to Center. This would be in our opinion a default setting resulting in a more readable chart.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 3548472bff2ebe9b72efcb0028c3b07321ed79e5
CPU threads: 8; OS: Windows 10.0 Build 14393; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-01-28 15:48:34 UTC
Created attachment 157483 [details]
Current default stacked area chart from Calc
Comment 2 Heiko Tietze 2020-02-03 10:30:04 UTC
No strong objection but please also consider bar charts where numbers are typically placed above the bars.
Comment 3 Commit Notification 2020-02-04 10:24:28 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/be936c5896045794b251a63ab1175ac06a36eee5

tdf#130242 chart: default center label placement in stacked area charts

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2020-02-04 10:25:26 UTC
(In reply to Heiko Tietze from comment #2)
> No strong objection but please also consider bar charts where numbers are
> typically placed above the bars.

@Heiko: thanks for your review! Unfortunately, missed that MSO does the same, and LO has already done in the case of stacked bar charts for readability.