tdf#130242 Change the default placement of the stacked area chart

data labels to Center.
Stacked area chart data labels were aligned to above by default.
It would look better if it were aligned (vertically) centered.

Change-Id: Icac6e8703d0d04122f9cc28254b053ee9fd434ec